# LapigEscola

./: .dockerignore  .eslintignore  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  CHANGELOG.md  Dockerfile  README.md  build-ssg.config.ts  build-ssg.ts  compose.yml  deploy.sh  init-db.sql  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  server.ts  stylelint.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: prod.yml  staging.yml
docker/prod/: Dockerfile
docker/staging/: Dockerfile
patches/: @purge-icons__core@0.9.1.patch
public/data/cerrado/: clima.md  geologia.md  hidrografia.md  relevo.md  solos.md
scripts/: README.md  prepare-shiki.ts
src/: VueroApp.vue  app.ts  entry-client.ts  entry-server.ts
src/assets/data/: temaAmbiental.json
src/backend/: manage.py
src/backend/escola/: views.py
src/backend/lapig/: api.py  asgi.py  settings.py  urls.py  wsgi.py
src/components/: LanguageDropdown.vue
src/composable/: useFetch.ts  useVFieldContext.ts
src/frondend/: nuxt.config.ts  package-lock.json  package.json
src/frontend-v1/: PROXY_README.md  README.md  START_DEV.md  angular.json  package-lock.json  package.json  proxy.conf.js  proxy.conf.json  tsconfig.json
src/layouts/: AppLayout.vue  AuthLayout.vue  LandingLayout.vue  SidebarLayout.vue
src/pages/: [...all].vue  app.vue  index.vue  map.vue  storytelling.vue
src/plugins/: session-check.ts
src/scss/: main.scss
src/stores/: temaAmbiental.ts  viewWrapper.ts
types/: components.d.ts  router.d.ts  shims-vue.d.ts
vite-plugin-purge-comments/: index.ts
(+204 files in other folders)
