[project]
name = "lapig-escola"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.0",
    "django>=5.2.4",
    "django-ckeditor-5>=0.2.18",
    "django-cors-headers>=4.7.0",
    "django-ninja>=1.4.3",
    "django-ordered-model>=3.7.4",
    "django-storages>=1.14.6",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
migrate = "python manage.py makemigrations && python manage.py migrate"
adduser = "python manage.py createsuperuser"

